--- a/FAST-LIO/package.xml
+++ b/FAST-LIO/package.xml
@@ -27,7 +27,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>livox_ros_driver</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>ytlab_handheld_sensoring_system_modules</build_depend>
+  <build_depend>aloam_velodyne</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -39,7 +39,7 @@
   <run_depend>pcl_ros</run_depend>
   <run_depend>livox_ros_driver</run_depend>
   <run_depend>message_runtime</run_depend>
-  <run_depend>ytlab_handheld_sensoring_system_modules</run_depend>
+  <run_depend>aloam_velodyne</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>rosbag</test_depend>
