--- a/PGO/package.xml
+++ b/PGO/package.xml
@@ -26,7 +26,8 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>ytlab_handheld_sensoring_system_modules</build_depend>
+  <build_depend>image_geometry</build_depend>
+  <build_depend>pcl_ros</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -37,7 +38,9 @@
   <run_depend>rosbag</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>image_transport</run_depend>
-  <run_depend>ytlab_handheld_sensoring_system_modules</run_depend>
+  <run_depend>image_geometry</run_depend>
+  <run_depend>pcl_ros</run_depend>
+  
 
   <export>
   </export>
